--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</h1>
 		</div>
 			<figure class="top-photo">
-				<img class="main_img" src="images/bay-ridge-racing.jpeg">
+				<img class="main_img" src="bay-ridge-racing.jpeg">
 				<figcaption class="head-photo"><span class="credit">Credit: pix11</span></figcaption>
             </figure>
             <div class="container">
